<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="121dp"
        android:layout_alignBottom="@+id/musicnote2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/songleText"
        android:textSize="80sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/musicnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/trebleclef"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="51dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/musicNote1"
        android:rotation="-25"
        app:srcCompat="@mipmap/musicnote" />

    <ImageView
        android:id="@+id/musicnote2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/musicnote3"
        android:contentDescription="@string/musicNote2"
        android:rotation="25"
        app:srcCompat="@drawable/musicnote2" />

    <ImageView
        android:id="@+id/musicnote3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/musicnote"
        android:layout_alignEnd="@+id/textView"
        android:contentDescription="@string/musicNote3"
        android:rotation="20"
        app:srcCompat="@drawable/musicnote1" />

    <ImageView
        android:id="@+id/trebleclef"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/musicnote2"
        android:layout_alignStart="@+id/musicnote"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/trebleClef"
        android:rotation="-30"
        app:srcCompat="@drawable/trebleclef" />

</RelativeLayout>
