<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:layout_weight="1"
        android:background="#cc6618"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/resumeButton" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_weight="1"
        android:background="#cc6618"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/getHintButton" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:background="#cc6618"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/mainMenuButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/settings"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

</RelativeLayout>
