<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:radius="30dp"
        android:layout_marginTop="150dp"
        android:layout_weight="1"
        android:background="#cc6618"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:text="@string/amateurButton" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_below="@+id/button4"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="#cc6618"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:text="@string/gstButton" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/button5"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="#cc6618"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:text="@string/fcoButton" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#cc6618"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:text="@string/difficultButton" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#cc6618"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:text="@string/impossibleButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/chooseLevel"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/button5"
        android:layout_marginBottom="18dp"
        android:layout_toLeftOf="@+id/button5"
        android:rotation="-25"
        android:src="@drawable/musicnote1" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button8"
        android:layout_toRightOf="@+id/button6"
        android:rotation="20"
        android:src="@drawable/musicnote2" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignTop="@+id/button7"
        android:layout_marginLeft="14dp"
        android:rotation="-10"
        android:src="@drawable/musicnote2" />

</RelativeLayout>
